--- a/3.1-Correlation.ipynb
+++ b/3.1-Correlation.ipynb
@@ -150,7 +150,7 @@
      "status": "ok",
      "timestamp": 1603336200340,
      "user": {
-      "displayName": "Ummu Amirah",
+      "displayName": "Tobin Sia",
       "photoUrl": "https://lh3.googleusercontent.com/a-/AOh14GjP1NlpYoc_oI22yqs_mrDA1sN2KGzfgGN0kht0=s64",
       "userId": "01871118759517508516"
      },
